[metadata]
name = lockstep-sdk
version = 2023.40.72
author = Lockstep
author_email = developer@lockstep.io
description = Lockstep Platform SDK for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lockstep-Network/lockstep-sdk-python
project_urls =
    Bug Tracker = https://github.com/Lockstep-Network/lockstep-sdk-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    requests

[options.packages.find]
where = src